ActiveMQ6-82 Windows support for runtime config
Adds activemq.conf.bat for configuring runtime options in Windows
environment.